# chatbot

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
application/: alembic.ini  chatbot_logger.py  dependencies.py  env_config.py  main.py  utils.py
application/alembic/versions/: 15e8000016b9_create_tables.py  7a7bfe71c77a_add_unique_column_telegram_id.py
application/bot/: appeal_to_service.py  bot.py  config_schedule.py  definer_commands.py  diagrams.py  helper_functions.py  my_bot.py  states.py
application/bot/keyboards/: inline_keyboards.py
application/bot/routers/: __init__.py  habit_handlers.py  schedule_time_handlers.py  token_handlers.py  user_hadlers.py
application/bot/routers/callback_handlers/: __init__.py  kb_callback_handlers.py
application/bot/routers/commands/: __init__.py  base_commands.py  habit_commands.py
application/db_config/: db.py
application/models/: __init__.py  habit_models.py  user_models.py
application/routers/: habits.py  tokens.py  users.py
application/schemas/: habit_schemas.py  status_schemas.py  token_schemas.py  user_schemas.py
application/services/: habit_service.py  user_service.py
application/tests/: conftest.py  test_habits.py  test_tokens.py  test_users.py
application/tests/factories/: factory_boy.py
